# MCC_MNC

./: README.md  TODO.md  chk_cntr.py  chk_ispc.py  chk_mnc.py  chk_msisdn.py  conv_pc_383.py  country_dist.csv  csv_country_dist.csv  csv_egal_min_dist.json  csv_txtn_mccmnc.py  gen_dataset.py  p1_cc2.json  p1_cc2.py  p1_cntr.json  p1_cntr.py  p1_mcc.json  p1_mcc.py  p1_mnc.json  p1_mnc.py  p1_msisdn.json  p1_msisdnext.json  p1_terr.json  p1_terr.py  parse_itut_bulletins.py  parse_various_csv.py  parse_wikipedia_tables.py  parse_worldfactbook_infos.py  patch_country_dep.py  patch_dataset.py  pyproject.toml  setup.py  wikip_borders.json  wikip_borders.py  wikip_iso3166.json  wikip_iso3166.py  wikip_mcc.json  wikip_mcc.py  wikip_mnc.json  wikip_mnc.py  (+6 more)
itut/: T-SP-OB.1121-2017-OAS-PDF-E.txt  T-SP-OB.1128-2017-OAS-PDF-E.txt  T-SP-OB.1133-2017-OAS-PDF-E.txt  T-SP-OB.1135-2017-OAS-PDF-E.txt  T-SP-OB.1137-2017-OAS-PDF-E.txt  T-SP-OB.1146-2018-OAS-PDF-E.txt  T-SP-OB.1148-2018-OAS-PDF-E.txt  T-SP-OB.1149-2018-OAS-PDF-E.txt  T-SP-OB.1153-2018-OAS-PDF-E.txt  T-SP-OB.1155-2018-OAS-PDF-E.txt  T-SP-OB.1166-2019-OAS-PDF-E.txt  T-SP-OB.1176-2019-OAS-PDF-E.txt  T-SP-OB.1185-2019-OAS-PDF-E.txt  T-SP-OB.1187-2020-OAS-PDF-E.txt  T-SP-OB.1194-2020-OAS-PDF-E.txt  T-SP-OB.1195-2020-OAS-PDF-E.txt  T-SP-OB.1199-2020-OAS-PDF-E.txt  T-SP-OB.1200-2020-OAS-PDF-E.txt  T-SP-OB.1203-2020-OAS-PDF-E.txt  T-SP-OB.1204-2020-OAS-PDF-E.txt  T-SP-OB.1208-2020-OAS-PDF-E.txt  T-SP-OB.1211-2021-OAS-PDF-E.txt  T-SP-OB.1212-2021-OAS-PDF-E.txt  T-SP-OB.1214-2021-OAS-PDF-E.txt  T-SP-OB.1215-2021-OAS-PDF-E.txt  T-SP-OB.1216-2021-OAS-PDF-E.txt  T-SP-OB.1217-2021-OAS-PDF-E.txt  T-SP-OB.1218-2021-OAS-PDF-E.txt  T-SP-OB.1219-2021-OAS-PDF-E.txt  T-SP-OB.1220-2021-OAS-PDF-E.txt  T-SP-OB.1221-2021-OAS-PDF-E.txt  T-SP-OB.1222-2021-OAS-PDF-E.txt  T-SP-OB.1224-2021-OAS-PDF-E.txt  T-SP-OB.1226-2021-OAS-PDF-E.txt  T-SP-OB.1227-2021-OAS-PDF-E.txt  T-SP-OB.1229-2021-OAS-PDF-E.txt  T-SP-OB.1230-2021-OAS-PDF-E.txt  T-SP-OB.1231-2021-OAS-PDF-E.txt  T-SP-OB.1232-2021-OAS-PDF-E.txt  T-SP-OB.1234-2021-OAS-PDF-E.txt  (+29 more)
itut_bulletins/: T-SP-OB.1112-2016-OAS-PDF-E.txt  T-SP-OB.1113-2016-OAS-PDF-E.txt  T-SP-OB.1117-2017-OAS-PDF-E.txt  T-SP-OB.1118-2017-OAS-PDF-E.txt  T-SP-OB.1120-2017-OAS-PDF-E.txt  (+32 more)
(+179 files in other folders)
